yes/no -> yes|no, marco processing, intro.txt

--- a/bin/setup/lang/gwf_1.htm
+++ b/bin/setup/lang/gwf_1.htm
@@ -447,8 +447,8 @@ start empty.
 
 <tr align=left>
 <td align=center>
-<input type=radio name=history value="yes"%Chistory=yes;>[yes/no]0
-<input type=radio name=history value="no"%Chistory=no;>[yes/no]1
+<input type=radio name=history value="yes"%Chistory=yes;>[yes|no]0
+<input type=radio name=history value="no"%Chistory=no;>[yes|no]1
 </tr>
 </table>
 
@@ -498,9 +498,9 @@ ncomplete, it is hidden by default. Select "no" below to set it.
 <tr align=left>
 <td align=center>
 <input type=radio name=hide_advanced_request
-value="yes"%Chide_advanced_request=yes;>[yes/no]0
+value="yes"%Chide_advanced_request=yes;>[yes|no]0
 <input type=radio name=hide_advanced_request
-value="no"%Chide_advanced_request=no;>[yes/no]1
+value="no"%Chide_advanced_request=no;>[yes|no]1
 </tr>
 </table>
 
@@ -599,9 +599,9 @@ t is accessible to Internet, to avoid that "wizards" make changes which would be
 <tr align=left>
 <td align=center>
 <input type=radio name=wizard_just_friend
- value="yes"%Cwizard_just_friend=yes;>[yes/no]0
+ value="yes"%Cwizard_just_friend=yes;>[yes|no]0
 <input type=radio name=wizard_just_friend
- value="no"%Cwizard_just_friend=no;>[yes/no]1
+ value="no"%Cwizard_just_friend=no;>[yes|no]1
 
 </td>
 </tr>
@@ -630,9 +630,9 @@ actly, the persons of less than one century.
 <tr align=left>
 <td align=center>
 <input type=radio name=hide_private_names
- value="yes"%Chide_private_names=yes;>[yes/no]0
+ value="yes"%Chide_private_names=yes;>[yes|no]0
 <input type=radio name=hide_private_names
- value="no"%Chide_private_names=no;>[yes/no]1
+ value="no"%Chide_private_names=no;>[yes|no]1
 
 </td>
 </tr>
@@ -666,9 +666,9 @@ ropriate file name.
 <tr align=left>
 <td align=center>
 <input type=radio name=can_send_image
- value="yes"%Ccan_send_image=yes;>[yes/no]0
+ value="yes"%Ccan_send_image=yes;>[yes|no]0
 <input type=radio name=can_send_image
- value="no"%Ccan_send_image=no;>[yes/no]1
+ value="no"%Ccan_send_image=no;>[yes|no]1
 
 </td>
 </tr>
